# nlp

./: README.md  creating-an-encoder-with-attention.ipynb  dataset_from_numpy_array.ipynb  kerf_text_classification_TextVectorization.md  kertf_TextVectorization.md  kertf_embeddinglayer.md  kertf_text_classification_Tokenised.md  nlp_cheatsheet.md  sklearn_featureExtract.md  space_cheatsheet.md  spacy_cheatsheet.md  spacy_introtasks.md  tfk_embeddinglayer.md  vectors_embeddings.md  vectors_embeddings_en.md  vectors_embeddings_rus.md
LLM/: casuaLM_gpt2_finetune_eli5.ipynb  maskedLM_distilRoBERTa_finetune_eli5.ipynb  multiple-choice-BERT_finetune_SWAG.ipynb
casual_LM/: casual_lm_gpt2_finetune_eli5.ipynb
chatbots/: retreival_chatbot.py
data/: compiled  gen_db_short.csv  gen_dialogue_short.csv  sample_churn.csv
embedding/: skip-gram-negsamp-pytorch.ipynb  skip-gram-pytorch.ipynb
fastai/: imdb_fastai.ipynb  notebook1fea5ed8f4.ipynb
feature_extraction/: hf_last_hidden_state_dataset.py  pytorch_make_CBOW.py  skl_bow_ngram_CountVectorizer.py  skl_ohe_OneHotEncoder.py  skl_ordinal_OrdinalEncoder.py  skl_tfidf_TfidfVectorizer.py  sklearn_label_LabelEncoder.py  tfidf_TfidfTransformer.py
feature_generation/: hf_last_hidden_state_dataset.py  (+5 more)
nlplib/: info.txt  readme.md  setup.cfg  setup.py
nlplib/src/mllibs/: data_source.py  dict_helper.py  ner_parser.py  nlpi.py  nlpm.py  tokeniser.py  user_request.py
nlplib/src/mllibs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nlplib/src/mllibs/corpus/: ner_corpus.csv
nlplib/src/mllibs/eda/: meda_splot.json  meda_splot.py
(+48 files in other folders)
